[gd_scene load_steps=13 format=2]

[ext_resource path="res://visuals/fonts/Adventurer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dialogue/textBox.png" type="Texture" id=2]
[ext_resource path="res://dialogue/pointer.png" type="Texture" id=3]
[ext_resource path="res://dialogue/DialogueBox.gd" type="Script" id=4]

[sub_resource type="InputEventKey" id=3]
scancode = 48

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
scancode = 49

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
scancode = 50

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1 ), Vector2( 0, 2 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[node name="DialogueBox" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -75.0
margin_right = 100.0
margin_bottom = -25.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Option0" type="Control" parent="."]
margin_left = -80.0
margin_top = -165.0
margin_right = -40.0
margin_bottom = -125.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Option0"]
margin_left = 85.5475
margin_top = 194.397
margin_right = 1110.55
margin_bottom = 522.397
rect_scale = Vector2( 0.05, 0.05 )
shortcut = SubResource( 4 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionText" type="RichTextLabel" parent="Option0"]
margin_left = 87.0
margin_top = 198.0
margin_right = 212.0
margin_bottom = 227.0
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Option1" type="Control" parent="."]
margin_left = -80.0
margin_top = -165.0
margin_right = -40.0
margin_bottom = -125.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Option1"]
margin_left = 147.853
margin_top = 193.951
margin_right = 1172.85
margin_bottom = 521.951
rect_scale = Vector2( 0.05, 0.05 )
shortcut = SubResource( 6 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionText" type="RichTextLabel" parent="Option1"]
margin_left = 149.306
margin_top = 198.297
margin_right = 274.306
margin_bottom = 227.297
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Option2" type="Control" parent="."]
margin_left = -80.0
margin_top = -165.0
margin_right = -40.0
margin_bottom = -125.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionButton" type="TextureButton" parent="Option2"]
margin_left = 211.129
margin_top = 194.064
margin_right = 1236.13
margin_bottom = 522.064
rect_scale = Vector2( 0.05, 0.05 )
shortcut = SubResource( 8 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="OptionText" type="RichTextLabel" parent="Option2"]
margin_left = 212.582
margin_top = 198.41
margin_right = 337.582
margin_bottom = 227.41
rect_scale = Vector2( 0.4, 0.4 )
mouse_filter = 2
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="pointer" type="Sprite" parent="."]
visible = false
position = Vector2( 188.139, 37.9478 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
offset = Vector2( 0, -1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="pointer"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 6.0
margin_top = 15.0
margin_right = 195.0
margin_bottom = 44.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Option0/OptionButton" to="." method="_on_OptionButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Option1/OptionButton" to="." method="_on_OptionButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Option2/OptionButton" to="." method="_on_OptionButton_pressed" binds= [ 2 ]]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
